# AprilSlamCPP

./: .gitignore  CMakeLists.txt  Readme  Readme.md  Visulisation.rviz  package.xml  raw_odometry.csv  refined_odometry.csv
bags/: .~lock.odometry.csv#  get_tra.py  gps.csv  odometry.csv  remove_tf.py
config/: afteroptimisation.csv  align.py  beforeoptimisation.csv  config.xml  ground_truth.csv  landmark.csv  landmark_best.csv  landmark_june.csv  params.yaml  params_DataAssociation.yaml  params_calibration.yaml  params_localisation.yaml  transformed_landmarks.csv
config/120hfov/: afteroptimisation.csv
config/180hfov/: afteroptimisation.csv
config/Cal1/: beforeoptimisation.csv
config/backup/: align.py  landmark_haygroveNov.csv  transformed_landmarks.csv
config/backup/120hfov/: beforeoptimisation.csv
config/backup/Cal1/: afteroptimisation.csv
config/backup/dlo/: afteroptimisation.csv
config/backup/loc1/: afteroptimisation.csv
config/backup/loc2bad/: afteroptimisation.csv  beforeoptimisation.csv  refined_odometry.csv
config/backup/loc2slight/: afteroptimisation.csv
config/dlo/: beforeoptimisation.csv
config/loc1/: beforeoptimisation.csv
config/loc2bad/: raw_odometry.csv
config/loc2slight/: beforeoptimisation.csv
include/: DataAssociation.h  PcClustering.h  aprilslamheader.h  publishing_utils.h
launch/: Visulisation.rviz  run.launch  run_association.launch  run_calibration.launch  run_localisation.launch
src/: AprilSlamCPP.cc  AprilSlamCPP.cpp  AprilSlamCPP.h  AprilSlam_Header.h  DataAssociation.cpp  DebugPlotting.cpp  PcClustering.cpp  aprilslamcpp (copy).cpp  aprilslamcpp.cpp  aprilslamcppcal.cpp  aprilslamcppcal111.cpp  aprilslamcpploc.cpp  aprilslamcpploc_backuo.cpp  aprilslamheader.h  publishing_utils.cpp  test.cpp
src/backup/: aprilslamcpp (copy).cpp  aprilslamcpploc.cpp  aprilslamheader.h
